--- a/src/pages/Cookbook/RecipeDetail.module.css
+++ b/src/pages/Cookbook/RecipeDetail.module.css
@@ -11,6 +11,7 @@
 .panel {
   width: min(680px, 100vw);
   height: 100vh;
+  height: 100dvh;
   background: var(--color-surface);
   display: flex;
   flex-direction: column;
